# VocabTester

./: .gitignore  Main.hs  README.markdown  custom_container.d  custom_random.d  lojban.vocab  main.d  main.py  vocab-tester.cabal  vocab_tester.d
Control/: Combinator.hs
Data/: Singleton.hs
Util/: IO.hs  Prelewd.hs
Vocab/: lojban.vocab
