Name:                VocabTester
Version:             0.1
Description:         Test vocabulary loaded from a file.
Author:              Ben Foppa
Maintainer:          benjamin.foppa@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.9.2

Executable VocabTester
    hs-source-dirs:    ./
    Main-is:           Main.hs
    GHC-Options:       -Wall -threaded -rtsopts=all -fllvm

    Build-Depends:     base,
                       parsec ==3.*

